# optimus

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  requirements.txt  test.cpp  test.cu
cmake/: OptimusConfig.cmake.in
docker/: Dockerfile  docker-compose.debug.yml
examples/: CMakeLists.txt  profile.cu  test.cu  test.py
optimus/: CMakeLists.txt  tensor.cc  tensor.h
optimus/bindings/: CMakeLists.txt  ops.cc  ops.cu
optimus/kernels/ops/: CMakeLists.txt  affine_transform.cu  affine_transform.h  arithmetic.cu  arithmetic.h  gemm.cu  gemm.h  gemm_utils.cuh
optimus/layers/: CMakeLists.txt  dense.cc  dense.h
optimus/ops/: CMakeLists.txt  gemm.cu  gemm.h
optimus/ops/kernels/: fp32_gemm.cuh  fp32_smem_load.cuh  smem_load.cuh
optimus/src/: CMakeLists.txt
optimus/src/kernels/: CMakeLists.txt
optimus/src/kernels/ops/: gemm.cu  gemm.h
optimus/utils/: CMakeLists.txt  array_utils.h  cuda_utils.cc  cuda_utils.cu  cuda_utils.h  log_utils.h  memanager.cc  memanager.h
profiles/: CMakeLists.txt
profiles/ops/: CMakeLists.txt  matmul_profile.cu
tests/: CMakeLists.txt  test.cu
tests/ops/: test_affine_transf.py  test_matmul.py
tests/optimus/: CMakeLists.txt  tensor.cu
