[tool.poetry]
name = "optimus"
version = "0.1.0"
description = "ML in CUDA and Python."
authors = ["DwaraknathT <dwarakasharma@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pybind11-global = "2.10.3"
jax = "0.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
